[gd_scene load_steps=9 format=3 uid="uid://b33nbjfw0fuf1"]

[ext_resource type="Script" path="res://scenes/world/ui/main_menu/main_menu.gd" id="1_jc670"]
[ext_resource type="Theme" uid="uid://l11sr7bcm8y6" path="res://scenes/world/Game.theme" id="1_piole"]
[ext_resource type="Texture2D" uid="uid://c762ps22qjxt3" path="res://assets/logos/screamjam2023.png" id="1_sgh5i"]
[ext_resource type="Texture2D" uid="uid://sgv2oggjjq3y" path="res://assets/logos/obs/ObsidianLogo_Small.png" id="2_itpb1"]
[ext_resource type="Texture2D" uid="uid://cvqlxifdax13t" path="res://assets/logos/obs/Logo_Open_Small.png" id="3_80nya"]
[ext_resource type="Texture2D" uid="uid://x0qvbk5fvhly" path="res://assets/logos/obs/Logo_Facing_Small.png" id="4_j151m"]
[ext_resource type="Texture2D" uid="uid://becpbpr451vul" path="res://assets/logos/obs/Logo_Facing_Bright_Small.png" id="5_62j0o"]
[ext_resource type="Texture2D" uid="uid://befxo4gcst4mb" path="res://assets/Title.png" id="8_02io8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_piole")
script = ExtResource("1_jc670")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_02io8")

[node name="MenuContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Layout" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/separation = -14

[node name="Titlebar" type="PanelContainer" parent="MenuContainer/Layout"]
layout_mode = 2
theme_type_variation = &"MenuTitleBar"

[node name="Label" type="Label" parent="MenuContainer/Layout/Titlebar"]
layout_mode = 2
text = "Main Menu"

[node name="Options" type="PanelContainer" parent="MenuContainer/Layout"]
show_behind_parent = true
layout_mode = 2
theme_type_variation = &"MenuButtonPanel"

[node name="Buttons" type="VBoxContainer" parent="MenuContainer/Layout/Options"]
layout_mode = 2

[node name="OpStart" type="Button" parent="MenuContainer/Layout/Options/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MenuOptionButton"
text = "Start"

[node name="OpOptions" type="Button" parent="MenuContainer/Layout/Options/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MenuOptionButton"
text = "Options"

[node name="OpQuit" type="Button" parent="MenuContainer/Layout/Options/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MenuOptionButton"
text = "Quit"

[node name="Logos" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Layout" type="HBoxContainer" parent="Logos"]
layout_mode = 2

[node name="ScreamJam" type="TextureRect" parent="Logos/Layout"]
custom_minimum_size = Vector2(0, 86)
layout_mode = 2
texture = ExtResource("1_sgh5i")
expand_mode = 3

[node name="Spacer" type="Control" parent="Logos/Layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnObs" type="TextureButton" parent="Logos/Layout"]
layout_mode = 2
texture_normal = ExtResource("2_itpb1")
texture_pressed = ExtResource("3_80nya")
texture_hover = ExtResource("4_j151m")
texture_focused = ExtResource("5_62j0o")

[connection signal="pressed" from="MenuContainer/Layout/Options/Buttons/OpStart" to="." method="_on_op_start_pressed"]
[connection signal="pressed" from="MenuContainer/Layout/Options/Buttons/OpOptions" to="." method="_on_op_options_pressed"]
[connection signal="pressed" from="MenuContainer/Layout/Options/Buttons/OpQuit" to="." method="_on_op_quit_pressed"]
[connection signal="pressed" from="Logos/Layout/BtnObs" to="." method="_on_btn_obs_pressed"]
